--- a/contact.html
+++ b/contact.html
@@ -28,18 +28,18 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="http://www.wespetal.com/index.html">Home</a></li>
-            <li role="presentation"><a href="http://www.wespetal.com/contact.html">Contact</a></li>
+            <li role="presentation"><a href="http://www.wespetal.com/index.html">Home</a></li>
+            <li role="presentation" class="active"><a href="http://www.wespetal.com/contact.html">Contact</a></li>
             <li role="presentation"><a href="http://www.wespetal.com/resume.pdf">Resume</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Robert Wespetal</h3>
       </div>
-      <div class="jumbotron">
-        <p class="lead">Welcome to my website! I am a senior at University of Wisconsin - Madison majoring in Computer Science.</p>
-	<p>You'll find my resume and contact information above. More content to come soon!</p> 
-      </div>
-
+	<div class="jumbotron">
+		<!-- Icons from http://martz90.deviantart.com/art/Circle-Icons-Pack-371172325 -->
+		<a href="mailto:robert@wespetal.com"><img src="img/email.png" alt="Email address"></a>
+		<a href="http://www.linkedin.com/in/robertwespetal"><img src="img/linkedin.png" alt="Linkedin profile"></a>
+	</div>
       <footer class="footer">
         <p>© Robert Wespetal 2015</p>
       </footer>
