--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <h3 class="text-muted">Robert Wespetal</h3>
       </div>
       <div class="jumbotron">
-        <p class="lead">Welcome to my website! I am a senior at University of Wisconsin - Madison majoring in Computer Science.</p>
+        <p class="lead">Welcome to my website! I am a software engineer at Cray Inc. I'm currently working on an advanced development team in Storage R&D.<p>
 	<p>You'll find my resume and contact information above. More content to come soon!</p> 
       </div>
 
       <footer class="footer">
-        <p>© Robert Wespetal 2015</p>
+        <p>© Robert Wespetal 2016</p>
       </footer>
 
     </div> <!-- /container -->
