--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="http://www.wespetal.com/index.html">Home</a></li>
-            <li role="presentation" class="active"><a href="http://www.wespetal.com/contact.html">Contact</a></li>
-            <li role="presentation"><a href="http://www.wespetal.com/resume.pdf">Resume</a></li>
+            <li role="presentation"><a href="index.html">Home</a></li>
+            <li role="presentation" class="active"><a href="contact.html">Contact</a></li>
+            <li role="presentation"><a href="resume.pdf">Resume</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Robert Wespetal</h3>
