--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="http://www.wespetal.com/index.html">Home</a></li>
-            <li role="presentation"><a href="http://www.wespetal.com/contact.html">Contact</a></li>
-            <li role="presentation"><a href="http://www.wespetal.com/resume.pdf">Resume</a></li>
+            <li role="presentation"><a href="contact.html">Contact</a></li>
+            <li role="presentation"><a href="resume.pdf">Resume</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Robert Wespetal</h3>
