--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3 class="text-muted">Robert Wespetal</h3>
       </div>
       <div class="jumbotron">
-        <p class="lead">Welcome to my website! I am a software engineer at Cray Inc. I'm currently working on an advanced development team in Storage R&D.<p>
+        <p class="lead">Welcome to my website! I am a software engineer at Cray Inc.<p>
 	<p>You'll find my resume and contact information above. More content to come soon!</p> 
       </div>
 
