--- a/index.html
+++ b/index.html
@@ -23,33 +23,30 @@
   <link rel="stylesheet" type="text/css" href="chrome-extension://pkehgijcmpdhfbdbbnkijodmdjhbjlgp/skin/socialwidgets.css"></head>
 
   <body>
-
     <div class="container">
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="http://www.wespetal.com/index.html">Home</a></li>
-            <li role="presentation"><a href="contact.html">Contact</a></li>
             <li role="presentation"><a href="resume.pdf">Resume</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Robert Wespetal</h3>
       </div>
       <div class="jumbotron">
-        <p class="lead">Welcome to my website! I am a software engineer at Cray Inc.<p>
-	<p>You'll find my resume and contact information above. More content to come soon!</p> 
+      <p class="lead">Welcome to my website! I am a software developer at
+      Amazon Web Services and I work on the 
+      <a href="https://aws.amazon.com/hpc/efa/">Elastic Fabric Adapter</a> network
+      interface.
+      <p>
+      You'll find my resume above and my contact information below.
+      <p>
+      <a href="mailto:robert@wespetal.com"><img src="img/email.png" alt="Email address"></a>
+      <!-- Icons from http://martz90.deviantart.com/art/Circle-Icons-Pack-371172325 -->
+      <a href="http://www.linkedin.com/in/robertwespetal"><img src="img/linkedin.png" alt="Linkedin profile"></a>
+      <a href="https://github.com/rwespetal"><img src="img/github.png" alt="Linkedin profile"></a>
       </div>
-
-      <footer class="footer">
-        <p>© Robert Wespetal 2017</p>
-      </footer>
-
     </div> <!-- /container -->
-
-
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
-  
-
-
 </body></html>
