--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
       </div>
       <div class="jumbotron">
       <p class="lead">Welcome to my website! I am a software developer at
-      Amazon Web Services and I work on the 
-      <a href="https://aws.amazon.com/hpc/efa/">Elastic Fabric Adapter</a> network
-      interface.
+      Amazon Web Services and I work on the EC2 VPC networking packet pipeline team.
       <p>
       You'll find my resume above and my contact information below.
       <p>
