--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><a href="http://www.wespetal.com/index.html">Home</a></li>
-            <li role="presentation"><a href="resume.pdf">Resume</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Robert Wespetal</h3>
       </div>
       <div class="jumbotron">
-      <p class="lead">Welcome to my website! I am a software developer at
-      Amazon Web Services and I work on the EC2 VPC networking packet pipeline team.
+      <p class="lead">Welcome to my website!
       <p>
-      You'll find my resume above and my contact information below.
+      You'll find my contact information below.
       <p>
       <a href="mailto:robert@wespetal.com"><img src="img/email.png" alt="Email address"></a>
       <!-- Icons from http://martz90.deviantart.com/art/Circle-Icons-Pack-371172325 -->
